Added commandPrefix to settings

--- a/OmniFarm/OmniFarm.cfg
+++ b/OmniFarm/OmniFarm.cfg
@@ -10,6 +10,7 @@
   }
   "ofColor":"&a"
   "cropOpacity":0.3
+  "commandPrefix":"!farm"
   "farmRegPath":"~/common/farmRegistry"
   "hoeRegistry":{
     1:{
