Fixed beetroot seed ID

--- a/OmniFarm/OmniFarm.cfg
+++ b/OmniFarm/OmniFarm.cfg
@@ -37,7 +37,7 @@
   "seedRegistry":{
     "minecraft:air":"minecraft:wheat_seeds"
     "minecraft:potatoes":"minecraft:potato"
-    "minecraft:beetroots":"minecraft:beetroot"
+    "minecraft:beetroots":"minecraft:beetroot_seeds"
     "minecraft:wheat":"minecraft:wheat_seeds"
     "minecraft:carrots":"minecraft:carrot"
   }
