Added reeds, doCrouch, and drawSoil

--- a/OmniFarm/OmniFarm.cfg
+++ b/OmniFarm/OmniFarm.cfg
@@ -6,12 +6,15 @@
     "minecraft:beetroots":"block:minecraft:blocks/glass_red"
     "minecraft:wheat":"block:minecraft:blocks/glass_yellow"
     "minecraft:chest":"block:minecraft:blocks/planks_oak"
+    "minecraft:reeds":"block:minecraft:blocks/glass_lime"
     "minecraft:carrots":"block:minecraft:blocks/glass_orange"
   }
-  "ofColor":"&a"
-  "cropOpacity":0.3
+  "doCrouch":false
+  "cropOpacity":0.4
   "commandPrefix":"!farm"
+  "ofColor":"&a"
   "farmRegPath":"~/common/farmRegistry"
+  "drawSoil":false
   "hoeRegistry":{
     1:{
       "id":"minecraft:stone_hoe"
@@ -39,9 +42,10 @@
     "minecraft:potatoes":"minecraft:potato"
     "minecraft:beetroots":"minecraft:beetroot_seeds"
     "minecraft:wheat":"minecraft:wheat_seeds"
+    "minecraft:reeds":"minecraft:reeds"
     "minecraft:carrots":"minecraft:carrot"
   }
-  "chestOpacity":1
+  "chestOpacity":0.6
   "errColor":"&4"
   "xray":true
 }
