Added netherwart support. Added plantDelay setting

--- a/OmniFarm/OmniFarm.cfg
+++ b/OmniFarm/OmniFarm.cfg
@@ -2,19 +2,21 @@
   "warnColor":"&6"
   "blockTexs":{
     "minecraft:potatoes":"block:minecraft:blocks/glass_silver"
-    "minecraft:farmland":"block:minecraft:blocks/glass_brown"
+    "minecraft:nether_wart":"block:minecraft:blocks/glass_purple"
     "minecraft:beetroots":"block:minecraft:blocks/glass_red"
+    "minecraft:farmland":"block:minecraft:blocks/glass_brown"
     "minecraft:wheat":"block:minecraft:blocks/glass_yellow"
     "minecraft:chest":"block:minecraft:blocks/planks_oak"
     "minecraft:reeds":"block:minecraft:blocks/glass_lime"
     "minecraft:carrots":"block:minecraft:blocks/glass_orange"
   }
   "doCrouch":false
-  "cropOpacity":0.4
-  "commandPrefix":"!farm"
   "ofColor":"&a"
-  "farmRegPath":"~/common/farmRegistry"
+  "commandPrefix":"!farm"
+  "cropOpacity":0.4
+  "plantDelay":20
   "drawSoil":false
+  "farmRegPath":"~/common/farmRegistry"
   "hoeRegistry":{
     1:{
       "id":"minecraft:stone_hoe"
@@ -41,6 +43,7 @@
     "minecraft:air":"minecraft:wheat_seeds"
     "minecraft:potatoes":"minecraft:potato"
     "minecraft:beetroots":"minecraft:beetroot_seeds"
+    "minecraft:nether_wart":"minecraft:nether_wart"
     "minecraft:wheat":"minecraft:wheat_seeds"
     "minecraft:reeds":"minecraft:reeds"
     "minecraft:carrots":"minecraft:carrot"
